--- a/index_amp.html
+++ b/index_amp.html
@@ -3,14 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Amarres de Amor EVARISTO - Consultas Gratis</title>
-  <link rel="canonical" href=".">
+  <meta name="description" content="Amarres de amor efectivos con el Maestro Evaristo. Limpias espirituales, consultas espirituales, lectura de tarot y magia de pareja. Consultas gratis por WhatsApp.">
+  <link rel="canonical" href="https://ampevaristo.vercel.app/">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <script async src="https://cdn.ampproject.org/v0.js"></script>
-  <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
-  <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
-  <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-  <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
-  <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
+  <script async custom-element="amp-video" src="https://cdn.ampproject.org/v0/amp-video-0.1.js"></script>
   <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-element="amp-bind" src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"></script>
@@ -21,7 +18,7 @@
     
  
 
-body#layout #outer-wrapper{width:880px;background-color:transparent;overflow:visible}body#layout #header-blog{overflow:hidden}body#layout #header-blog:before{content:"HEADER";padding:0 0 10px;display:block}body#layout .header-logo{width:40%;float:left;margin-top:2px;overflow:visible}body#layout .header-AdSense{width:60%;float:left;margin-top:2px;overflow:visible}body#layout #gadget-horizontal:before{content:"SECCION ADSENSE";padding:0 0 26px;display:block;margin-top=33px}body#layout #gadget-responsive:before{content:"SECCION POPULAR POST";padding:0 0 26px;display:block;margin-top=33px}body#layout #main-wrapper{width:62%;float:left;margin-top:2px;overflow:visible}body#layout #sidebar-wrapper{width:36%;float:left;margin-top:2px;margin-left:10px;overflow:visible}body#layout #sidebar-wrapper:before{content:"SECCION SIDEBAR";padding:0 0 26px;display:block;margin-top=33px}body#layout #footer{overflow:hidden}body#layout .footer-wrapper{overflow:hidden}body#layout #footer1{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer2{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer3{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer4{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer:before{content:"SECCION FOOTER";padding:0 0 26px;display:block;margin-top=33px}body#layout ul,li{display:none}
+body#layout #outer-wrapper{width:880px;background-color:transparent;overflow:visible}body#layout #header-blog{overflow:hidden}body#layout #header-blog:before{content:"HEADER";padding:0 0 10px;display:block}body#layout .header-logo{width:40%;float:left;margin-top:2px;overflow:visible}body#layout .header-AdSense{width:60%;float:left;margin-top:2px;overflow:visible}body#layout #gadget-horizontal:before{content:"SECCION ADSENSE";padding:0 0 26px;display:block;margin-top:33px}body#layout #gadget-responsive:before{content:"SECCION POPULAR POST";padding:0 0 26px;display:block;margin-top:33px}body#layout #main-wrapper{width:62%;float:left;margin-top:2px;overflow:visible}body#layout #sidebar-wrapper{width:36%;float:left;margin-top:2px;margin-left:10px;overflow:visible}body#layout #sidebar-wrapper:before{content:"SECCION SIDEBAR";padding:0 0 26px;display:block;margin-top:33px}body#layout #footer{overflow:hidden}body#layout .footer-wrapper{overflow:hidden}body#layout #footer1{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer2{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer3{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer4{width:23%;float:left;margin-top:2px;overflow:visible}body#layout #footer:before{content:"SECCION FOOTER";padding:0 0 26px;display:block;margin-top:33px}body#layout ul,li{display:none}
 
 
 
@@ -2517,7 +2514,7 @@ color: #fff;
             <p>Your browser doesn't support HTML5 video.</p>
         </div>
     </amp-video>
-    <div class="mystic-play-btn" on="tap:video1.play,video1-btn.hide" id="video1-btn"></div>
+    <div class="mystic-play-btn" on="tap:video1.play,video1-btn.hide" id="video1-btn" role="button" tabindex="0"></div>
 </div>
 
 <div class="services-escalator-container" id="servicios">
@@ -2587,7 +2584,7 @@ color: #fff;
             <p>Your browser doesn't support HTML5 video.</p>
         </div>
     </amp-video>
-    <div class="mystic-play-btn" on="tap:video2.play,video2-btn.hide" id="video2-btn"></div>
+    <div class="mystic-play-btn" on="tap:video2.play,video2-btn.hide" id="video2-btn" role="button" tabindex="0"></div>
 </div>
 <amp-img alt='amarres de amor' height='821' layout='responsive' src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjj3p-vuwqUKdxSNwwjskPRFnD59DYrkyYDy_1vKVPc4tviKqQbIFa_Vca4i8aC6OMqkGr0ZfalNWzytvyjYD2ydTVDQwe9qQ45Seqvi_snsQ7iEKPgdaa4fvCl6WMECopAU0VRIbfv9apm/s1600/amarres2.jpeg' width='1280'>
 
@@ -2654,7 +2651,7 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
             <p>Your browser doesn't support HTML5 video.</p>
         </div>
     </amp-video>
-    <div class="mystic-play-btn" on="tap:video3.play,video3-btn.hide" id="video3-btn"></div>
+    <div class="mystic-play-btn" on="tap:video3.play,video3-btn.hide" id="video3-btn" role="button" tabindex="0"></div>
 </div>
 
 
@@ -2773,9 +2770,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
   </div>
 
   <!-- Modales de Servicios -->
-  <amp-lightbox id="modal-limpias" layout="nodisplay" class="modal-container" on="tap:modal-limpias.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-limpias.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-limpias" layout="nodisplay" class="modal-container" on="tap:modal-limpias.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-limpias.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🌿 LIMPIAS ESPIRITUALES 🌿</h3>
       <p class="modal-description">
         Las limpias espirituales son rituales ancestrales que ayudan a eliminar energías negativas, malas vibras y cargas espirituales que afectan tu vida diaria. Utilizo hierbas sagradas, huevos frescos y oraciones poderosas para purificar tu aura y restaurar tu equilibrio energético. Este servicio es ideal para personas que sienten pesadez, mala suerte persistente o bloqueos en diferentes áreas de su vida.
@@ -2784,9 +2781,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-consulta" layout="nodisplay" class="modal-container" on="tap:modal-consulta.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-consulta.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-consulta" layout="nodisplay" class="modal-container" on="tap:modal-consulta.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-consulta.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🔮 CONSULTA ESPIRITUAL 🔮</h3>
       <p class="modal-description">
         Ofrezco consultas espirituales profundas donde analizo tu situación actual utilizando mis dones de videncia y conexión espiritual. Durante la consulta, identifico los problemas que te aquejan, revelo las causas ocultas de tus dificultades y te proporciono orientación clara sobre el camino a seguir. Cada consulta es personalizada y confidencial, diseñada para brindarte respuestas reales a tus preguntas más importantes.
@@ -2795,9 +2792,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-amarres" layout="nodisplay" class="modal-container" on="tap:modal-amarres.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-amarres.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-amarres" layout="nodisplay" class="modal-container" on="tap:modal-amarres.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-amarres.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🕯️ AMARRES DE AMOR 🕯️</h3>
       <p class="modal-description">
         Los amarres de amor son trabajos espirituales poderosos diseñados para unir dos personas destinadas a estar juntas. Realizo diferentes tipos de amarres según tu situación: amarres para reconciliación, para atraer a esa persona especial, para fortalecer una relación existente o para recuperar un amor perdido. Trabajo con magia blanca y roja, velas consagradas, hierbas del amor y rituales bajo la luna llena para garantizar resultados efectivos y duraderos.
@@ -2806,9 +2803,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-tarot" layout="nodisplay" class="modal-container" on="tap:modal-tarot.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-tarot.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-tarot" layout="nodisplay" class="modal-container" on="tap:modal-tarot.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-tarot.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🃏 LECTURA DE CARTAS Y TAROT 🃏</h3>
       <p class="modal-description">
         Realizo lecturas de tarot y cartas españolas con más de 20 años de experiencia. Mediante el tarot puedo revelarte tu pasado, presente y futuro, respondiendo preguntas específicas sobre amor, trabajo, dinero, salud y familia. Utilizo diferentes métodos de tirada según tu necesidad, incluyendo la tirada de la cruz celta, tirada del amor, tirada del trabajo y lecturas personalizadas. Cada lectura incluye interpretación detallada y consejos espirituales.
@@ -2817,9 +2814,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-pareja" layout="nodisplay" class="modal-container" on="tap:modal-pareja.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-pareja.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-pareja" layout="nodisplay" class="modal-container" on="tap:modal-pareja.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-pareja.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">💍 MAGIA DE PAREJA 💍</h3>
       <p class="modal-description">
         La magia de pareja está enfocada en mejorar, fortalecer y sanar las relaciones amorosas. Realizo trabajos espirituales para solucionar problemas de comunicación, eliminar terceras personas, recuperar la pasión perdida, aumentar la fidelidad y crear armonía en la relación. Estos rituales son especialmente efectivos para parejas que atraviesan crisis, discusiones frecuentes o distanciamiento emocional. Trabajo con rituales de endulzamiento, unión de corazones y protección de la relación.
@@ -2828,9 +2825,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-catemaco" layout="nodisplay" class="modal-container" on="tap:modal-catemaco.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-catemaco.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-catemaco" layout="nodisplay" class="modal-container" on="tap:modal-catemaco.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-catemaco.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🔥 BRUJOS DE CATEMACO 🔥</h3>
       <p class="modal-description">
         Provengo de la tradición milenaria de los brujos de Catemaco, México, reconocidos mundialmente por sus poderosos trabajos de magia ancestral. Utilizo técnicas heredadas de generación en generación, combinando magia prehispánica con rituales tradicionales. Realizo trabajos de alta magia, limpias profundas, amarres definitivos, despojos de brujería, protecciones espirituales y rituales especiales. Mi conocimiento de hierbas sagradas, brebajes místicos y rituales nocturnos garantiza la efectividad de cada trabajo.
@@ -2839,9 +2836,9 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
     </div>
   </amp-lightbox>
 
-  <amp-lightbox id="modal-atraccion" layout="nodisplay" class="modal-container" on="tap:modal-atraccion.close">
-    <div class="modal-content" on="tap:event.stopPropagation">
-      <button on="tap:modal-atraccion.close" class="modal-close">×</button>
+  <amp-lightbox id="modal-atraccion" layout="nodisplay" class="modal-container" on="tap:modal-atraccion.close" role="dialog" tabindex="-1">
+    <div class="modal-content" on="tap:event.stopPropagation" role="document" tabindex="0">
+      <button on="tap:modal-atraccion.close" class="modal-close" role="button" tabindex="0">×</button>
       <h3 class="modal-title">🧲 ATRACCIÓN PODEROSA 🧲</h3>
       <p class="modal-description">
         Los rituales de atracción poderosa están diseñados para magnetizar hacia ti aquello que deseas: amor, prosperidad, éxito, oportunidades laborales o abundancia económica. Estos trabajos actúan como imanes espirituales que modifican tu energía vibracional para atraer lo positivo y rechazar lo negativo. Realizo rituales con imanes consagrados, miel virgen, canela, azúcar morena y velas doradas. Son especialmente efectivos para atraer a una persona específica o para abrir caminos en diferentes áreas de tu vida.
