--- a/index_amp.html
+++ b/index_amp.html
@@ -2536,7 +2536,10 @@ color: #fff;
     <img alt='Imagen' src='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgowFHG4TbQv_B4TaNiz0f3p3ruaR9I3AN-01I3jm0b6njG7oTew85e6rLXppiqdfMWgBqZTJ_MsQSXkhftI3FE6Sb2Wug2AL5qmOldldtrkKir0HnYoLHzahcuvCJ23M8FwyScOJaa2Y6DteMAWPoKqEMM1wu6KHmWp7_5xj6uVAc_-dQoGnSkCVJZhpQn/s16000/81FoYfMQltL._AC_SL1500_.jpg'/>
 </div>
 
-<form id="whatsapp-form" method="get" target="_top">
+<form id="whatsapp-form" 
+      action="https://wa.me/13323337351" 
+      method="get" 
+      target="_blank">
     <label for="nombre">Nombre completo:</label>
     <input type="text" id="nombre" name="nombre" maxlength="30" required 
            on="input-debounced:AMP.setState({nombre: event.value})" 
