Change call button to WhatsApp call for quick access

--- a/index.html
+++ b/index.html
@@ -2767,10 +2767,10 @@ Lo importante para el trabajo, es una buena canalización de energía y el conve
 
   <!-- Footer / Floating Buttons -->
   <div class='contacto22'>
-     <a href='https://wa.me/+17606662274' id='callnowbutton2' rel='nofollow' target='_blank' title='Whatsapp'>
+     <a href='https://wa.me/+17606662274?text=Hola%20Maestro%20Evaristo,%20deseo%20una%20consulta%20gratis' id='callnowbutton2' rel='nofollow' target='_blank' title='Whatsapp'>
         <span class='NoButtonText2'>Whatsapp</span>
      </a>
-     <a href='tel:+17606662274' id='callnowbutton' rel='nofollow' title='Llamar'>
+     <a href='https://api.whatsapp.com/send?phone=17606662274' id='callnowbutton' rel='nofollow' target='_blank' title='Llamada WhatsApp'>
         <span class='NoButtonText2'>Llamar</span>
      </a>
   </div>
