Update with new phone number and Tag Manager ID

--- a/index_amp.html
+++ b/index_amp.html
@@ -2465,7 +2465,7 @@ color: #fff;
   </style>
 </head>
 <body>
-  <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-WGBTB5F" data-credentials="include"></amp-analytics>
+  <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-WQPJTZQR" data-credentials="include"></amp-analytics>
   <header class="antique-header">
     <div class="header-container">
         <a href="#" class="header-logo-text">Maestro Evaristo</a>
