Actualizar template_amp.html: ajustes de estilo

--- a/template_amp.html
+++ b/template_amp.html
@@ -10,7 +10,7 @@
   <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
   
   <title>Brujo José - Amarres de Amor y Brujería Experta</title>
-  <link rel="canonical" href="https://consultasgratis.brujosgratis.online/">
+  <link rel="canonical" href="https://brujojose.videntes.org">
   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
   <meta name="description" content="Brujo José - Experto en amarres de amor, brujería y trabajos espirituales. Consulta gratis. Más de 35 años de experiencia. Resultados garantizados en 72 horas.">
   <meta name="keywords" content="brujos, amarres de amor, brujería, hechizos, magia negra, consulta gratis, brujo experto">
@@ -19,8 +19,7 @@
   <meta property="og:title" content="Brujo José - Amarres de Amor">
   <meta property="og:description" content="Experto en amarres de amor y brujería. Consulta gratis.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://consultasgratis.brujosgratis.online/">
-  
+   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="https://blogger.googleusercontent.com/img/a/AVvXsEg2686L86TOkhK7_RQ1d26ls4cYM9WQI6ZIRDtY8q8dM74KscPP1mtQPXHWpczvvfKiqiX8njmsnK5qa3frS4mq_KmhgULiHNwjjBSr6ZLTmdOqOtFIq3eYBw28K1SeBZFtGGFvWEP_Znsc0LXH9HYZRf9wG9OdYd5lmMjXdWKQ87rL0ArTXhZV5_q6AEQ=s16000">
   
@@ -721,7 +720,7 @@ h3 { font-size: 24px; }
             autoplay
             loop
             muted>
-            <source src="video.mp4" type="video/mp4">
+            <source src="video2.mp4" type="video/mp4">
         </amp-video>
         </div>
 
