Integrate Google Tag Manager in index.html
Added Google Tag Manager script for tracking.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
     content="Brujo José - Experto en amarres de amor, brujería y trabajos espirituales. Consulta gratis. Más de 35 años de experiencia. Resultados garantizados en 72 horas.">
   <meta name="keywords"
     content="brujos, amarres de amor, brujería, hechizos, magia negra, consulta gratis, brujo experto">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11495571750">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-11495571750');
+</script>
   <!-- Security Headers -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
