Update WhatsApp number and GTM integration
Updated WhatsApp contact number and added Google Tag Manager script.

--- a/template_amp.html
+++ b/template_amp.html
@@ -14,9 +14,9 @@
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+      }) =; var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src
+      'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-55TQ628G');</script>
   <!-- End Google Tag Manager -->
   <title>Brujo José - Amarres de Amor y Brujería Experta</title>
@@ -26,7 +26,16 @@
     content="Brujo José - Experto en amarres de amor, brujería y trabajos espirituales. Consulta gratis. Más de 35 años de experiencia. Resultados garantizados en 72 horas.">
   <meta name="keywords"
     content="brujos, amarres de amor, brujería, hechizos, magia negra, consulta gratis, brujo experto">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11495571750">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-11495571750');
+</script>
   <!-- Security Headers -->
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
@@ -52,7 +61,7 @@
       "@type": "PostalAddress",
       "addressCountry": "Estados Unidos"
     },
-    "telephone": "+13165404596",
+    "telephone": "+12017479815",
     "priceRange": "$$",
     "aggregateRating": {
       "@type": "AggregateRating",
@@ -735,14 +744,7 @@
 </head>
 
 <body>
-  <!-- Google Tag Manager (AMP) -->
-  <!-- 
-    IMPORTANTE: Este bloque está comentado para evitar errores de CORS al probar en local (file://).
-    Debe descomentarse al subir a un servidor real para que funcione el tracking.
-  -->
-  <!--
- 
-  -->
+
 
   <!-- StatCounter -->
   <amp-pixel src="https://c.statcounter.com/12914613/0/a29a24f8/1/"></amp-pixel>
@@ -794,8 +796,8 @@
         <!-- WhatsApp Contact -->
         <div class="container" id="sparkling">
           <a class="more-info"
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
-            WhatsApp - 3165404596
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            WhatsApp - 2017479815
           </a>
         </div>
 
@@ -808,7 +810,7 @@
         <!-- CTA Button -->
         <div class="centrado">
           <a class="whatsapp-button"
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
             Chatea con nosotros en WhatsApp
           </a>
         </div>
@@ -840,7 +842,7 @@
             contras y sanciones espirituales.
           </p>
           <a class="more-info"
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
             Consulta en WhatsApp
           </a>
         </div>
@@ -858,7 +860,7 @@
             cientos de personas a conseguir lo que desean en el ámbito amoroso, personal y profesional.
           </p>
           <a class="more-info"
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
             Consulta en WhatsApp
           </a>
         </div>
@@ -873,14 +875,14 @@
             Brujo <span style="color: gold;">José</span>
           </h2>
           <a
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
-            3165404596
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            2017479815
           </a>
         </div>
 
         <!-- Chat Button -->
         <a
-          href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+          href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
           <button class="chat-button" id="chat-button">
             <amp-img alt="Chat Icon"
               src="https://cdn.jsdelivr.net/gh/saltbalente/cssismael@main/ezgif.com-gif-maker%20(19)%20(1).webp"
@@ -908,7 +910,7 @@
             sus metas amorosas.
           </p>
           <a
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
             <button class="button">WhatsApp</button>
           </a>
         </div>
@@ -938,7 +940,7 @@
             <h2>Consulta Gratis</h2>
             <p>Consulte por WhatsApp y obtenga todo lo que siempre ha deseado</p>
             <a class="whatsapp-button"
-              href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+              href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
               Contáctanos
             </a>
           </div>
@@ -983,7 +985,7 @@
             Yo trabajo y después usted paga.
           </p>
           <a class="more-info"
-            href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+            href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
             WhatsApp
           </a>
         </div>
@@ -1132,7 +1134,7 @@
     <!-- Fixed WhatsApp Button -->
     <div class="container2">
       <a
-        href="https://wa.me/13165404596?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
+        href="https://wa.me/12017479815?text=Hola%2C%20quiero%20consultar%20gratis%20con%20el%20maestro%2C%20por%20favor.">
         <button class="whatsapp-btn">
           <amp-img alt="WhatsApp" id="whatsapp-btn2"
             src="https://blogger.googleusercontent.com/img/a/AVvXsEgJAo6Ne5978huT0V8QSPRNPh9lRrC8QlO2IqK58Hv0rm-CKrWG4SZ1DB6cYG3QDvgYcBKBafPDJlW_AWeBQ1ezAFWzaCXy4lA999xAl_3wd1cEMDluC7AAAQLvJm8RkEojyTl0QFCPvlGk2shEkkDU8FlpnD3VK46nqk9dCU8tf-JAC63cdv-I6nAB=w71-h71"
@@ -1156,11 +1158,11 @@
       Llamar
     </a>
   </div>
-
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-55TQ628G" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
 </body>
 
 </html>
